protox/tests/snapshots/error__import_error.snap
---
source: protox/tests/error.rs
expression: "check_err(&[(\"root.proto\", \"import 'customerror.proto';\")])"
---
causes: []
labels: []
message: failed to load file!
related: []
severity: error

