protox/tests/snapshots/error__import_not_found.snap
---
source: protox/tests/error.rs
expression: "check_err(&[(\"root.proto\", \"import 'notfound.proto';\")])"
---
causes: []
labels: []
message: "import 'notfound.proto' not found"
related: []
severity: error

